# nut_Meals

./: .env  .gitignore  README.md  docker-compose.yml  init-dbs.sql
admin-service/: .env  Dockerfile  main.py  requirements.txt
admin_cms_service/: .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
api-gateway/: .env  .env.example  main.py
cart_checkout_ext/: .env.example  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
catalog_service/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
crm_service/: Dockerfile  requirment.txt
delivery-service/: .env  (+3 more)
finance-service/finance-service/: .gitignore  pyproject.toml  pytest.ini  requirements.txt
finance-service/finance-service/alembic/: env.py
finance-service/finance-service/alembic/versions/: 0002_seed_default_accounts.py
finance-service/finance-service/app/core/: config.py  database.py
finance-service/finance-service/app/models/: journal.py
finance-service/finance-service/app/routers/: journal.py  reconciliation.py
finance-service/finance-service/app/schemas/: journal.py
finance-service/finance-service/app/services/: ledger_service.py  order_client.py  trial_balance_service.py
finance-service/finance-service/app/tasks/: celery_app.py  report_tasks.py
finance-service/finance-service/docker/: entrypoint.sh
finance-service/finance-service/tests/: test_journal.py  test_ledger.py
(+678 files in other folders)
