[project]
name = "finance-service"
version = "1.0.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = ["alembic/", "tests/"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/celery_app.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
